refactor: app add feat of student

--- a/.env.example
+++ b/.env.example
@@ -3,11 +3,11 @@
 
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-NEXT_PUBLIC_API_URL=""
+NEXT_PUBLIC_API_URL="http://localhost:3001"
 DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
 
 NEXTAUTH_SECRET="Ufwq7gVLbpK+OVowWOSqWVkr0xU4efGz8mfoIKtJ6AM="
-NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL=http://localhost:3001
 
 
 #bucketName = "teste"
