--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "next": "13.4.19",
     "next-auth": "0.0.0-pr.6777.c5550344",
     "react": "18.2.0",
+    "react-data-table-component": "^7.5.4",
     "react-dom": "18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
     "react-hook-form": "^7.46.2",
     "react-query": "^3.39.3",
     "react-quill": "^2.0.0",
     "react-toastify": "^9.1.3",
+    "styled-components": "^6.1.0",
     "typescript": "5.2.2",
     "yup": "^1.2.0"
   }
