chore: update env

--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=pub
 
 NEXTAUTH_SECRET="Ufwq7gVLbpK+OVowWOSqWVkr0xU4efGz8mfoIKtJ6AM="
 NEXTAUTH_URL=http://localhost:3001
-
+API_HOST=http://localhost:3001
 
 #bucketName = "teste"
 #accountId = "52188e466642e3012f5ab2b6bec578f8"
