--- a/.env.example
+++ b/.env.example
@@ -4,10 +4,12 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 NEXT_PUBLIC_API_URL="http://localhost:3001"
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+DATABASE_URL="postgresql://hiagosilvafernandes123:TSAChmYki7t1@ep-crimson-sound-32090293.us-east-2.aws.neon.tech/neondb"
 
 NEXTAUTH_SECRET="Ufwq7gVLbpK+OVowWOSqWVkr0xU4efGz8mfoIKtJ6AM="
 NEXTAUTH_URL=http://localhost:3001
+
+API_HOST=http://localhost:3001
 
 
 #bucketName = "teste"
