--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "framer-motion": "^10.16.2",
+    "js-cookie": "^3.0.5",
     "next": "13.4.19",
     "next-auth": "0.0.0-pr.6777.c5550344",
     "react": "18.2.0",
@@ -37,5 +38,8 @@
     "styled-components": "^6.1.0",
     "typescript": "5.2.2",
     "yup": "^1.2.0"
+  },
+  "devDependencies": {
+    "@types/js-cookie": "^3.0.5"
   }
 }
