--- a/package.json
+++ b/package.json
@@ -14,17 +14,24 @@
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.1",
     "@phosphor-icons/react": "^2.0.13",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "@types/react-draft-wysiwyg": "^1.13.4",
     "axios": "^1.5.0",
     "chakra-react-select": "^4.7.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "draft-js": "^0.11.7",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "framer-motion": "^10.16.2",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.291.0",
     "next": "13.4.19",
     "next-auth": "0.0.0-pr.6777.c5550344",
     "react": "18.2.0",
@@ -36,10 +43,15 @@
     "react-quill": "^2.0.0",
     "react-toastify": "^9.1.3",
     "styled-components": "^6.1.0",
+    "tailwind-merge": "^2.0.0",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
     "yup": "^1.2.0"
   },
   "devDependencies": {
-    "@types/js-cookie": "^3.0.5"
+    "@types/js-cookie": "^3.0.5",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5"
   }
 }
